# ifisher

./: README.md
python/: iViewer.py  pyproject.toml
python/examples/: clone_extract_config.yaml
python/ifish_tools/: __init__.py  nd2_processor.py  rsfish_runner.py
python/ifish_tools/cloneextract/: __init__.py  __main__.py  cli.py  config.py  core.py
python/ifish_tools/countmatrix/: __init__.py  cli.py  core.py  qc.py  qc_cli.py  regis_puncta.py
python/ifish_tools/plotting/: __init__.py  __main__.py  cli.py  core.py  io.py
python/ifish_tools/unroll/: __init__.py  __main__.py  cli.py  endpoints.py  io.py  principal_curve.py  transform.py
python/ifish_tools/usegment3d/: __init__.py  __main__.py  aggregation.py  cellpose_views.py  cli.py  config.py  pipeline.py  smoothing.py  utils.py
python/tests/: test_cloneextract.py  test_countmatrix_cli.py  test_countmatrix_core.py  test_countmatrix_qc.py
tests/: test_regis_puncta.py
